<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/user_photo" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/profile_pic"
            android:text="@string/user_name" />

        <TextView
            android:id="@+id/user_role"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/user_name"
            android:layout_marginTop="-3dp"
            android:layout_toEndOf="@+id/profile_pic"
            android:text="@string/user_role" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_title" />

        <TextView
            android:id="@+id/user_name_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name_details_title" />

        <EditText
            android:id="@+id/user_name_details_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:text="@string/user_name" />


        <TextView
            android:id="@+id/user_email_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_email_details_title" />

        <EditText
            android:id="@+id/user_email_details_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:text="@string/user_email_details_input" />

        <TextView
            android:id="@+id/user_phone_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_phone_details_title" />


        <EditText
            android:id="@+id/user_phone_details_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone"
            android:inputType="phone"
            android:text="@string/user_phone_details_input" />

        <TextView
            android:id="@+id/user_desc_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_desc_details_title" />

        <EditText
            android:id="@+id/user_desc_details_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:text="@string/user_desc_details_input" />


    </LinearLayout>


</LinearLayout>