<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_bottom"
    tools:context=".LoginModal">


    <TextView
        android:id="@+id/logintitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logintitle"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_login"

        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress" />
    <!--android:drawableRight="@drawable/ic_profile"-->


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Password"

        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/pwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"

        android:text="@string/show_pwd" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_pwd"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/or_txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or_login"
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="242dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:background="@drawable/signingoogle"

        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="center"

        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_login"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_gravity="center"

        android:background="@drawable/confirmbtn" />
</LinearLayout>