<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_bottom"
    tools:context=".LoginModal">


    <TextView
        android:id="@+id/registerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_login"

        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/icon_input_login"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/Password"
        android:textColor="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/pwd_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/icon_input_pwd"
        android:ems="10"
        android:inputType="textPassword"
        android:padding="10dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/show_pwd"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/or_txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/or_login"

        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark" />


    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="242dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        android:background="@drawable/signingoogle"
        android:textColor="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="165dp"
        android:layout_height="35dp"
        android:layout_gravity="center"

        android:layout_margin="10dp"
        android:background="@drawable/confirmbtn" />
</LinearLayout>