<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchItemFragment"
    android:id="@+id/fragment_search_item">

    <TextView
        android:id="@+id/name_search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="name" />

    <TextView
        android:id="@+id/role_search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <ImageView
        android:id="@+id/profile_search_item"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/user_photo" />

    <TextView
        android:id="@+id/desc_search_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/contactbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_btn" />

    <Button
        android:id="@+id/savebtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sav_fav_btn" />

    <Button
        android:id="@+id/reportbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_btn" />
</LinearLayout>