<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/search_home"
    android:background="@drawable/bg_home"
    android:padding="@dimen/padding_screen"
    tools:context=".Search_home">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        app:srcCompat="@drawable/ic_ht_logo_white_vertical" />

    <TextView
        android:id="@+id/introTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:text="@string/text_intro_search"
        android:textColor="@color/txt_white" />


    <EditText
        android:id="@+id/searchInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="314dp"
        android:background="@color/txt_white"
        android:hint="@string/searchInput"
        android:padding="@dimen/padding_input"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="68dp"
        android:background="@color/txt_white"
        android:onClick="afterLogin"
        android:text="@string/searchButton"
        android:textColor="@color/txt_blue"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="17dp"
        android:text="Button" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/logo"
        android:layout_alignBottom="@+id/button"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:text="Button" />
</RelativeLayout>